added support for Safari 9 on iOS

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
+    "react-app-polyfill": "^1.0.1",
     "react-dom": "^16.7.0",
     "react-modal": "^3.8.1",
     "react-scripts": "2.1.3"
@@ -21,6 +22,7 @@
     ">0.2%",
     "not dead",
     "not ie <= 11",
-    "not op_mini all"
+    "not op_mini all",
+    "ios_saf >= 9"
   ]
 }
